# openwisp-ipam

./: .coveragerc  .gitignore  .jslintrc  .prettierignore  .stylelintignore  .stylelintrc.json  .travis.yml  AGENTS.md  CHANGES.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  admin.py  pyproject.toml  requirements-test.txt  requirements.test.txt  requirements.txt  run-qa-checks  runcheckmigration  runtests.py  setup.cfg  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bot-ci-failure.yml  ci.yml  pypi.yml  version-branch.yml
docs/: index.rst
docs/developer/: extending.rst  index.rst  installation.rst
docs/partials/: developer-docs.rst
docs/user/: import-export-subnets.rst  intro.rst  rest-api.rst
openwisp_ipam/: __init__.py  admin.py  apps.py  compat.py  filters.py  models.py  tests.py  urls.py
openwisp_ipam/api/: __init__.py  serializers.py  urls.py  utils.py  views.py
openwisp_ipam/base/: admin.py  fields.py  forms.py  models.py
openwisp_ipam/migrations/: 0001_initial.py  0002_remove_ipaddress_organization.py  0003_shareable_subnets.py  0004_subnet_organization_unique_together.py  0005_default_groups_permissions.py  0006_extend_openwisp_users.py  __init__.py
openwisp_ipam/static/: import_data.xls
openwisp_ipam/tests/: __init__.py  mixins.py  test_admin.py  test_api.py  test_commands.py  test_forms.py  test_hierarchy_validation.py  test_models.py  test_multitenant.py  test_users_integration.py  tests.py
tests/: manage.py  settings.py  urls.py  wsgi.py
tests/openwisp2/: settings.py  (+2 more)
(+40 files in other folders)
