[flake8]
exclude = *.egg-info,
          .git,
          *migrations/0*,
          ./tests/*settings*.py,
          docs/*
# W503: line break before or after operator
# W504: line break after or after operator
# W605: invalid escape sequence
# E203: not PEP 8 compliant rule
ignore = W605, W503, W504, E203
max-line-length = 88

[metadata]
license-file = LICENSE

[wheel]
universal = 1

[isort]
combine_as_imports=true
default_section=THIRDPARTY
line_length=88
multi_line_output=3
use_parentheses=True
include_trailing_comma=True
force_grid_wrap=0
