[flake8]
exclude = *.egg-info,
          .git,
          *migrations/0*,
          ./tests/*settings*.py,
          docs/*
# W503: line break before or after operator
# W504: line break after or after operator
# W605: invalid escape sequence
# E203: not PEP 8 compliant rule
ignore = W605, W503, W504, E203
max-line-length = 88

[metadata]
license-file = LICENSE

[wheel]
universal = 1
